# weather-station

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig
main/: CMakeLists.txt  idf_component.yml  weather24.c  weather32.c  weather48.c  weatherstation.cpp
main/include/: AP.hpp  Config.hpp  HomeWidget.hpp  LvglManager.hpp  NVS.h  SharedData.hpp  TimeWidget.hpp  Util.hpp  Weather.h  WeatherDashboard.hpp  WeatherPanel.hpp  WeatherServer.hpp  WeatherWidget.hpp  WiFi.h
main/include/Hardware/: I2CBus.hpp  Pins.hpp  SPIBus.hpp
main/include/Hardware/Display/: Display.hpp  ILI3941Builder.hpp  ILI9341.hpp  SPIDisplay.hpp
main/include/Hardware/TouchController/: SPITouchController.hpp  TouchController.hpp  XPT2046.hpp
main/include/Hardware/WeatherSensor/: BME280.hpp  I2CWeatherSensor.hpp  WeatherSensor.hpp
main/include/Screen/: MainScreen.hpp  Screen.hpp  WifiScreen.hpp
main/src/: AP.cpp  HomeWidget.cpp  LvglManager.cpp  NVS.c  TimeWidget.cpp  Util.cpp  Weather.c  WeatherDashboard.cpp  WeatherPanel.cpp  WeatherServer.cpp  WeatherWidget.cpp  WiFi.c
main/src/Hardware/: I2CBus.cpp  Pins.cpp  SPIBus.cpp
main/src/Hardware/Display/: ILI9341.cpp
main/src/Hardware/WeatherSensor/: BME280.cpp
main/src/Screen/: MainScreen.cpp  WifiScreen.cpp
partition/: index.html  style.css  wifi.html
